git commit -m "adicionando dados pessoais"

--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-     <link rel="stylesheet" href="css/styles.css" >
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="imagem/icon1.png">
     <title>Curriculo</title>
 </head>
+
 <body>
-    <div >
+    <div>
         <h2> Perfil </h2>
-      <img src="./imagem/perfil.jpg" />
-      <div class="perfil">
-        <h2>Sobre mim </h2>
-            Brasileira, Casada, 23 anos
-            Formada em Analise e Desenvlvimento de sistemas 
-            pela facudade estacio fic com conclução de curso em 2020.2
-            Formação Adicional curso tecnico em informatica pela E.E.E.P Marvin
-      </div>
-      <div>
-        <h2>Detalhes</h2>
-        <h3>Nome:</h3>
-        <p>Jessilane de sousa Batista Dantas</p>
-        <h3>Idade:</h3>
-        <p>23</p>
+        <img src="./imagem/perfil.jpg" />
+        <div class="perfil">
+            <h2>Dados Pessoais</h2>
+            Fortaleza-CE
+            (85)989075174
+            Jessilanesousa77@gmail.com
+            gitHub: https://github.com/jessisousa
+            linkedin: https://www.linkedin.com/in/jessilane-dantas-5b0083264/
+            <h2>Habilidades</h2>
+            Fortes: Html, Css, JavaScript, git, Java, Banco de dado MySQL – PostgreSQL, Php
+            Projetos
+            Projeto desenvolvido no curso de full stack pela digital college
+            https://github.com/jessisousa/projetodigitalstore
+            <h2>Formação Acadêmica</h2>
+            Análise e Desenvolvimento de Sistemas – Estácio Fic – Concluído em2020.2
+            Experiência Proficional
+            Estágio em Desenvolvimento de Sistemas – TI – Período: 300 Horas Empresa:
+            Assembleia Legislativa do Estado do Ceará
+            Estágio em auxiliar de banco de dados – TI – Período: 1ano e 3mesesEmpresa:
+            Cedeteran - Prestadora de serviço ao Detran
+            <h2> Atividades Complementares </h2>
+            Curso de .NET – Período:40 horas (Lógica e Programação Orientada a objeto -
+            (*Curso fornecido pela a Assembleia Legislativa do Estado doCeará)
+            Curso Introdutório de Android – Período 100 horas
+            curso de full stack - Digital college - cursando
+        </div>
+        <div>
+            <h2>Detalhes</h2>
+            <h3>Nome:</h3>
+            <p>Jessilane de sousa Batista Dantas</p>
+            <h3>Idade:</h3>
+            <p>23</p>
+        </div>
     </div>
-    </div>
-  
+
 </body>
+
 </html>
