git commit -m "alterações"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <div>
         <h2> Perfil </h2>
         <img src="./imagem/perfil.jpg" />
-        <div class="perfil">
+        
+            <div>
+                <h3>Nome:</h3>
+                <p>Jessilane de sousa Batista Dantas</p>
+                <h3>Idade:</h3>
+                <p>23</p>
+            </div>
+            <div class="perfil">
             <h2>Dados Pessoais</h2>
             Fortaleza-CE
             (85)989075174
